Small poke to fix spacing all over the place

--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,22 @@ body
 padding: 60px 0 0 0;
 }
 
-.tablesorter-icon 
+.tablesorter-icon
 {
 cursor: pointer;
+}
+
+.panel-body
+{
+	padding-bottom: 5px !important;
+}
+
+.panel-footer
+{
+	padding-bottom: 0 !important;
+}
+
+.table
+{
+	margin-bottom: 10px !important;
 }
